# Nevo

./: TODO.md
.github/workflows/: contracts-ci.yml
FundEdu/: Cargo.toml  README.md
FundEdu/src/: errors.rs  lib.rs
contract/: BLACKLIST_FEATURE.md
contract/contract/src/: contract.rs  crowdfunding.rs
contract/contract/src/base/: errors.rs  events.rs  types.rs
contract/contract/src/interfaces/: application.rs  crowdfunding.rs  mod.rs  pool.rs  second_crowdfunding.rs
contract/contract/test/: application_test.rs  blacklist_test.rs  buy_ticket_reentrancy_test.rs  buy_ticket_test.rs  close_pool_test.rs  close_private_pool_test.rs  create_event_test.rs  crowdfunding_test.rs  event_test_repro.rs  fund_edu_contract_test.rs  fund_edu_lifecycle_test.rs  get_pool_contributions_paginated_test.rs  mod.rs  platform_fee_test.rs  pool_deposit_test.rs  pool_lifecycle_events_test.rs  pool_remaining_time_test.rs  scholarship_validation_test.rs  upgrade_contract_test.rs  verify_cause.rs
frontend/: package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/contact-us/: Page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/profile-settings/: page.tsx
frontend/src/components/: Button.tsx  CTASection.tsx  ConnectWallet.tsx  FeaturesSection.tsx  Footer.tsx  GlobalSearch.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navigation.tsx  PoolGrid.tsx  SecuritySection.tsx  index.ts
frontend/src/components/ui/: Page.tsx
frontend/src/lib/: stellar.ts
(+7 files in other folders)
